--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
     - name: "Test project"
       uses: pyrmont/action-janet-test@master
       with:
-        cmd-deps: "jpm -l run test-deps"
-        cmd-test: "jpm -l test"
+        cmd-deps: ""
+        cmd-test: "jpm test"
